--- a/CheckMarkView/Base.lproj/Main.storyboard
+++ b/CheckMarkView/Base.lproj/Main.storyboard
@@ -1,25 +1,81 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="C4E-If-kHS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Collection View Controller-->
+        <scene sceneID="56S-EE-2gk">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <collectionViewController id="C4E-If-kHS" customClass="CollectionViewController" customModule="CheckMarkView" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ehs-sB-Vox">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="64m-Ce-fdF">
+                            <size key="itemSize" width="100" height="100"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="ELu-PZ-NhS" customClass="CollectionViewCell" customModule="CheckMarkView" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F75-Uy-RX4">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZfF-Wk-S9C">
+                                            <rect key="frame" x="60" y="8" width="28" height="28"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="28" id="HuI-ro-LnC"/>
+                                                <constraint firstAttribute="width" constant="28" id="I09-tR-g9H"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="trailingMargin" secondItem="ZfF-Wk-S9C" secondAttribute="trailing" constant="4" id="36g-3J-tBo"/>
+                                    <constraint firstItem="ZfF-Wk-S9C" firstAttribute="top" secondItem="ELu-PZ-NhS" secondAttribute="topMargin" id="AL4-Fj-l0J"/>
+                                    <constraint firstItem="F75-Uy-RX4" firstAttribute="top" secondItem="ELu-PZ-NhS" secondAttribute="topMargin" constant="-8" id="GXh-sP-vL0"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="F75-Uy-RX4" secondAttribute="trailing" constant="-8" id="bU5-WY-bS4"/>
+                                    <constraint firstItem="ZfF-Wk-S9C" firstAttribute="leading" secondItem="ELu-PZ-NhS" secondAttribute="leadingMargin" constant="52" id="dyz-Db-RMi"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="ZfF-Wk-S9C" secondAttribute="bottom" constant="56" id="jDg-pV-D0h"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="ZfF-Wk-S9C" secondAttribute="trailing" constant="4" id="lhI-52-W6H"/>
+                                    <constraint firstItem="ZfF-Wk-S9C" firstAttribute="top" secondItem="ELu-PZ-NhS" secondAttribute="topMargin" id="lhy-2c-Fzt"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="F75-Uy-RX4" secondAttribute="bottom" constant="-8" id="r7X-Ww-bOh"/>
+                                    <constraint firstItem="F75-Uy-RX4" firstAttribute="leading" secondItem="ELu-PZ-NhS" secondAttribute="leadingMargin" constant="-8" id="y6C-nb-QU4"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="dyz-Db-RMi"/>
+                                        <exclude reference="jDg-pV-D0h"/>
+                                        <exclude reference="lhI-52-W6H"/>
+                                        <exclude reference="lhy-2c-Fzt"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <outlet property="checkMarkView" destination="ZfF-Wk-S9C" id="ot6-aa-eU9"/>
+                                    <outlet property="imageView" destination="F75-Uy-RX4" id="ZIa-EA-l4d"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="C4E-If-kHS" id="7rB-Zn-mz5"/>
+                            <outlet property="delegate" destination="C4E-If-kHS" id="0g9-nd-bBK"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rle-BR-XM0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="801" y="105"/>
         </scene>
     </scenes>
 </document>
